# Assurance-CI

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  DOMAIN.md  ONBOARDING.md  PLAN.md  PROGRESS.md  Readme.md  SPEC.md  TASK.md  TODO.md  assurance.yml  feature_list.json  llms.txt  pyproject.toml
.claude/: README.md  hooks.json  mcp.json  settings.json
.claude/agents/: docs-writer.md  research-assistant.md  test-writer.md
.claude/commands/: test-generation.md
.claude/hooks/: format-file.sh  pre-commit.sh
.claude/rules/: design-system.md
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/workflows/: assurance.yml  deploy-jira-pages.yml
.streamlit/: config.toml
docs/: ADOPTION.md  CI-ARCHITECTURE.md  DEMO_BACKLOG.md  EXTENDING.md  LEARNINGS.md  TEST-GENERATION-PIPELINE.md  TROUBLESHOOTING.md
docs/adr/: ADR-001-python-pytest-bdd.md  ADR-002-domain-purity.md  ADR-003-register-json.md  ADR-004-claude-code-action-migration.md  README.md
docs/research/: INDEX.md  anthropic.md  httpx.md  playwright.md  pydantic.md  pytest-asyncio.md  pytest-bdd.md  pytest-cov.md  pytest-playwright.md  pytest.md  python-dotenv.md  ruff.md  tree-sitter-typescript.md  tree-sitter.md
jira/: PROT-101.md  PROT-102.md  PROT-103.md  PROT-104.md  PROT-105.md  PROT-106.md  PROT-107.md  PROT-108.md  PROT-109.md  PROT-110.md  PROT-111.md  PROT-112.md  PROT-113.md  PROT-114.md  PROT-115.md  PROT-116.md  PROT-117.md  PROT-118.md  PROT-119.md  PROT-120.md  PROT-121.md  PROT-122.md  PROT-123.md
scripts/: append_record.py  build_context.py  build_pr_body.py  fetch_jira_ticket.py  generate_tests.py  init.sh  render_register.py  resolve_gate.py  run_tests.py
src/dashboard/: app.py
src/domain/: commit_parser.py  generator.py  models.py  (+3 more)
tests/: test_build_context.py  test_domain.py  test_error_paths.py  test_generator.py  test_pipeline.py
traceability/: REGISTER.md  demo_records.json
(+3 files in other folders)
