[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "assurance-ci"
version = "0.1.0"
description = "Story-to-gate traceability pipeline for Pfizer Assurance Line"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "pytest>=8.0.0",
    "pytest-bdd>=7.0.0",
    "playwright>=1.45.0",
    "pytest-playwright>=0.5.0",
    "streamlit>=1.36.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]

[tool.setuptools.packages.find]
where = ["src"]
