[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "assurance-ci"
version = "0.1.0"
description = "Story-to-gate traceability pipeline for Pfizer Assurance Line"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "httpx>=0.27.0",          # required by generated pytest-bdd tests (PROT-101 template)
    "pytest>=8.0.0",
    "pytest-bdd>=7.0.0",
    "playwright>=1.45.0",
    "pytest-playwright>=0.5.0",
    "streamlit>=1.36.0",
    "python-dotenv>=1.0.0",
    # pydantic: reserved for Phase 1 schema validation; models currently use dataclasses
    "pydantic>=2.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest-asyncio>=0.23.0",  # included for future async test support; not used by current sync tests
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]
